<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diaspora Realm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="online_diaspora_service_portal">Online Diaspora Service Portal</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="personal_details">Personal Details</string>
    <string name="full_names">Full Names</string>
    <string name="national_id">National ID</string>
    <string name="gender">Gender</string>
    <string name="occupation">Occupation</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>
    <string name="next">Next >></string>
    <string name="postal_address">Postal Address</string>
    <string name="title_activity_next_of_kin">Next Of Kin</string>
    <string name="next_of_kin_details">Next Of Kin Details</string>
    <string name="kins_name">Kin\'s Names</string>
    <string name="kins_phone_number">Kin\'s Phone Number</string>
    <string name="kins_address">Kin\'s Address</string>
    <string name="kins_country">Kin\'s Country</string>
    <string name="account_details">Account Details</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="embassies_choice">Embassies / Consulates</string>
    <string name="report_problem">Report Problem</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_embassy_consulate">Embassy Consulate</string>
    <string name="title_activity_report_problem">Report Problem</string>
    <string name="list_of_embassies">List of Embassies</string>
    <string name="lists_of_consulates">List of Consulates</string>
    <string name="closest_embassy_consulate">Closest Embassy / Consulate</string>
    <string name="title_activity_embassy_list">Embassy\'s List</string>
    <string name="title_activity_consulate_list">Consulate\'s List</string>
    <string name="title_activity_closest_embassy_consulate">Closest Embassy / Consulate</string>
    <string name="title_activity_embassies_single_item">More Details</string>
    <string name="namelabel">Country Name : </string>
    <string name="choose_an_option_below">Choose an Option Below</string>
    <string name="write_message">Write Message</string>
    <string name="record_message">Record Message</string>
    <string name="title_activity_write_message">Write Message</string>
    <string name="message_content">Message Content</string>
    <string name="title_activity_record_message">Record Message</string>
    <string name="content_description"></string>
    <string name="start_recording">Start</string>
    <string name="stop_recording">Stop</string>
    <string name="play_record">Play</string>
    <string name="telephone_number">Telephone Number : </string>
    <string name="citizens_per_country">Citizens per Country</string>
    <string name="title_activity_citizens_per_country_list">Country List</string>
    <string name="city">City :</string>
    <string name="website">Website :</string>
    <string name="e_mail">E-Mail</string>
    <string name="fax">Fax :</string>
    <string name="postal_address_">Postal Address :</string>
    <string name="title_activity_citizens_list">Citizen\'s List</string>

</resources>
