<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/telephonelabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/record_message"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@android:drawable/presence_audio_online" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/play_imageButton"
        android:layout_alignRight="@+id/play_imageButton"
        android:layout_below="@+id/play_imageButton"
        android:gravity="center"
        android:text="@string/play_record" />

    <ImageButton
        android:contentDescription="@string/content_description"
        android:id="@+id/start_imageButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:src="@drawable/abc_ic_voice_search" />

    <ImageButton
        android:contentDescription="@string/content_description"
        android:id="@+id/stop_imageButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/start_imageButton"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_alignTop="@+id/start_imageButton"
        android:src="@drawable/abc_ic_voice_search_api_holo_light" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/start_imageButton"
        android:layout_below="@+id/start_imageButton"
        android:gravity="center"
        android:text="@string/start_recording" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/stop_imageButton"
        android:gravity="center"
        android:text="@string/stop_recording" />

    <ImageButton
        android:contentDescription="@string/content_description"
        android:id="@+id/play_imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:src="@android:drawable/ic_media_play" />

</RelativeLayout>